--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   intl: ^0.18.0
 
   flutter_gen: any
+  firebase_core: ^2.24.2
+  firebase_crashlytics: ^3.4.9
 dev_dependencies:
   bloc_test: ^9.1.4
   flutter_test:
